# budget-automation

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  logging_config.json  pyproject.toml  run_budgeting.sh
.github/workflows/: cd.yml  ci.yml
config/: category_mapping.json
infra/: README.md
infra/sudoers/: budget-automation
infra/systemd/: budget-automation.service  budget-automation.timer
src/: main.py  sheets.py  starling.py
src/budget_automation/: config.py  database.py  logger.py  sheets.py  sql.py  starling.py  unique_new_transactions.sql  upsert_new_transactions.sql
src/budget_automation/SQL/: create_settled_table.sql  truncate_new_transactions.sql  unique_new_transactions.sql
tests/: conftest.py  test_database.py  test_sheets.py  test_starling.py
