[project]
name = "budget-automation"
version = "0.1.0"
description = ""
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "bandit>=1.9.4",
    "cachetools==5.3.2",
    "certifi==2023.11.17",
    "charset-normalizer==3.3.2",
    "google-auth==2.25.2",
    "google-auth-oauthlib==1.2.0",
    "gspread==5.12.3",
    "idna==3.6",
    "oauthlib==3.2.2",
    "pandas==2.3.3",
    "psycopg2-binary>=2.9.11",
    "pyasn1==0.5.1",
    "pyasn1-modules==0.3.0",
    "pydantic-settings>=2.13.1",
    "python-dateutil==2.8.2",
    "python-dotenv==1.0.0",
    "pytz==2023.3.post1",
    "requests==2.31.0",
    "requests-oauthlib==1.3.1",
    "rsa==4.9",
    "six==1.16.0",
    "sqlalchemy>=2.0.48",
    "tzdata==2023.3",
    "urllib3==2.1.0",
]

[dependency-groups]
test = [
    "coverage>=7.6.1,<8",
    "pytest>=8.3.3,<9",
    "pytest-mock>=3.14, <4",
    "pytest-cov>=5.0,<6",
]
dev = ["ruff>=0.4,<1", "mypy>=1.10, <2"]

[tool.uv]
default-groups = [
    "test",
    "dev",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
mypy_path = "src"
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
explicit_package_bases = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=80"
pythonpath = ["src"]

[tool.coverage.run]
source = ["src"]
omit = ["src/main.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:"
]
