[project]
name = "budget-automation"
version = "0.1.0"
description = ""
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.14"
readme = "README.md"
dependencies = [
    "google-auth>=2.25",
    "gspread>=5.12",
    "pandas>=2.3",
    "psycopg2-binary>=2.9",
    "pydantic-settings>=2.13",
    "requests>=2.31",
    "sqlalchemy>=2.0",
    "tenacity>=9.1.4",
]

[dependency-groups]
dev = [
    "ruff>=0.4,<1",
    "mypy>=1.10,<2",
    "bandit>=1.9,<2",
    "pre-commit>=4.5.1",
    "types-requests>=2.32.4.20260107",
]
test = [
    "coverage>=7.6.1,<8",
    "pytest>=8.3.3,<9",
    "pytest-mock>=3.14, <4",
    "pytest-cov>=5.0,<6",
    "pytest-dotenv>=0.5.2",
]

[tool.uv]
default-groups = [
    "test",
    "dev",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
mypy_path = "src"
python_version = "3.14"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
explicit_package_bases = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
env_files = [".env.test"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=80"
pythonpath = ["src"]
filterwarnings = [
	"ignore::DeprecationWarning:dateutil.*"
]

[tool.coverage.run]
source = ["src"]
omit = ["src/main.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:"
]
